--- a/LordoftheRings/Views/Character/ShowCharacters.cshtml
+++ b/LordoftheRings/Views/Character/ShowCharacters.cshtml
@@ -23,7 +23,8 @@
             <h4 class="card-title">@item.Name</h4>
             <h5 class="card-title">@item.races.Name</h5>
             <p class="card-text">@item.Description</p>
-            <a asp-controller="Character" asp-action="Edit" asp-route-id="@item.CharacterId" class="btn btn-primary">Go somewhere</a>
+            <a asp-controller="Character" asp-action="Edit" asp-route-id="@item.CharacterId" class="btn btn-primary">Edit Cat</a>
+            <a class="btn btn-primary">Show Cat</a>
           </div>
         </div>
     }
