--- a/LordoftheRings/Views/Shared/_CharacterForm.cshtml
+++ b/LordoftheRings/Views/Shared/_CharacterForm.cshtml
@@ -25,7 +25,7 @@
     <div>
         @Html.LabelFor(x => x.Character.Gender)
 
-        @Html.DropDownListFor(x => x.Character.Gender, Html.GetEnumSelectList<Gender>(), "Select your cats Gender")
+        @Html.DropDownListFor(x => x.Character.Gender, Html.GetEnumSelectList<Gender>(), "Select your characters Gender")
     </div>
 
     <div>
@@ -33,4 +33,4 @@
         @Html.TextBoxFor(x => x.Character.ProfilePicture)
     </div>
 
-    <button type="submit" class="btn btn-primary">Save Cat</button>
+    <button type="submit" class="btn btn-primary">Save Character</button>
